security/network-policies/frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-policy
  namespace: restaurant
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Accepter le trafic depuis l'Ingress controller
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - port: 3000
  egress:
    # Vers les services backend (API calls SSR)
    - to:
        - podSelector:
            matchLabels:
              app: service-user
      ports:
        - port: 8080
    - to:
        - podSelector:
            matchLabels:
              app: service-menu
      ports:
        - port: 3000
    - to:
        - podSelector:
            matchLabels:
              app: service-order
      ports:
        - port: 8080
    # DNS (CoreDNS)
    - to:
        - namespaceSelector: {}
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
