security/network-policies/service-menu.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: service-menu-policy
  namespace: restaurant
spec:
  podSelector:
    matchLabels:
      app: service-menu
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Accepter le trafic depuis l'Ingress controller
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - port: 3000
    # Accepter le trafic depuis service-order
    - from:
        - podSelector:
            matchLabels:
              app: service-order
      ports:
        - port: 3000
  egress:
    # Vers MongoDB
    - to:
        - podSelector:
            matchLabels:
              app: mongo-menu
      ports:
        - port: 27017
    # Vers Redis
    - to:
        - podSelector:
            matchLabels:
              app: redis
      ports:
        - port: 6379
    # Vers Kafka
    - to:
        - podSelector:
            matchLabels:
              app: kafka
      ports:
        - port: 29092
    # DNS (CoreDNS)
    - to:
        - namespaceSelector: {}
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
