security/network-policies/service-payment.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: service-payment-policy
  namespace: restaurant
spec:
  podSelector:
    matchLabels:
      app: service-payment
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Accepter le trafic depuis service-order uniquement (saga)
    - from:
        - podSelector:
            matchLabels:
              app: service-order
      ports:
        - port: 8080
  egress:
    # Vers PostgreSQL
    - to:
        - podSelector:
            matchLabels:
              app: postgres-payment
      ports:
        - port: 5432
    # Vers Kafka
    - to:
        - podSelector:
            matchLabels:
              app: kafka
      ports:
        - port: 29092
    # DNS (CoreDNS)
    - to:
        - namespaceSelector: {}
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
