security/network-policies/service-user.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: service-user-policy
  namespace: restaurant
spec:
  podSelector:
    matchLabels:
      app: service-user
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Accepter le trafic depuis l'Ingress controller
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - port: 8080
    # Accepter le trafic depuis service-order
    - from:
        - podSelector:
            matchLabels:
              app: service-order
      ports:
        - port: 8080
  egress:
    # Vers PostgreSQL
    - to:
        - podSelector:
            matchLabels:
              app: postgres-user
      ports:
        - port: 5432
    # Vers Redis
    - to:
        - podSelector:
            matchLabels:
              app: redis
      ports:
        - port: 6379
    # Vers Kafka
    - to:
        - podSelector:
            matchLabels:
              app: kafka
      ports:
        - port: 29092
    # Vers Keycloak
    - to:
        - podSelector:
            matchLabels:
              app: keycloak
      ports:
        - port: 8080
    # DNS (CoreDNS)
    - to:
        - namespaceSelector: {}
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
